--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -16,6 +17,7 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "material-ui": "^1.0.0-beta.44",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.22.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
