--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.2.0",
     "react-beautiful-dnd": "^7.1.2",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
